# vermilion

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  target.sh
include/learnopengl/: shader.hpp
include/vermilion/: vermilion.h
src/01-introduction_to_opengl/: triangles.cpp
src/02-shader_fundamentals/: shader.cpp  shader.glsl  uniform_block.cpp  uniform_block.frag  uniform_block.vert
src/03-drawing_with_opengl/: drawcommands.cpp  instancing.cpp  instancing.fs.glsl  instancing.vs.glsl  instancing2.cpp  instancing2.fs.glsl  instancing2.vs.glsl  instancing3.cpp  instancing3.fs.glsl  instancing3.vs.glsl  pointsprites.cpp  pointsprites.fs.glsl  pointsprites.vs.glsl  primitiverestart.cpp  vs.glsl
src/04-color_pixels_fragments/: aa_post.fs.glsl  aa_post.vs.glsl  anti_aliasing_multisampling.cpp  offscreen_multisample.cpp
src/05-viewing_transformation/: blue.fs.glsl  render.vs.glsl  update.vs.glsl  white.fs.glsl  xfb.cpp
src/06-Textures_And_Framebuffers/: analyticpp.fs.glsl  cubemap.cpp  cubemap.fs.glsl  cubemap.vs.glsl  cubemap_object.fs.glsl  cubemap_object.vs.glsl  mipmap.cpp  mipmap.fs.glsl  mipmap.vs.glsl  multitexture.cpp  multitexture.fs.glsl  multitexture.vs.glsl  texturedpointsprites.cpp  texturedpp.fs.glsl  texturedpp.vs.glsl  texturew.fs.glsl  texturew.vs.glsl  texturewrapping.cpp  volumetexturing.cpp  volumetexturing.fs.glsl  volumetexturing.vs.glsl
